Add manage question gui and slide animation

--- a/student_exercise.html
+++ b/student_exercise.html
@@ -110,7 +110,7 @@
 								<div id="filter" class="answer-box">
 									<div id="answerbox-header">
 										<h4>Nhập câu trả lời</h4>
-										<span id="guide"><a id="pop" class="btn btn-small btn-info" data-toggle="popover" data-animation="true" data-content="<ul><li>Cách nhập thứ 1</li><li>Cách nhập thứ 2</li></ul>" data-placement="top" data-html="true" data-trigger="hover">Định dạng nhập</a></span>
+										<span id="guide"><a id="pop" z data-toggle="popover" data-animation="true" data-content="<ul><li>Cách nhập thứ 1</li><li>Cách nhập thứ 2</li></ul>" data-placement="top" data-html="true" data-trigger="hover">Định dạng nhập</a></span>
 									</div>
 									<div id="answerbox-container">
 									
